# ARIA_RDK

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txtCMakeLists.txt  README.md  cxx_flags_update  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  old
backup_source/: dataworkspace.cpp  dataworkspace.h  mdioctaveinterface.cpp  mdioctaveinterface.h  variable.cpp  variable.h
controller/: radarcontroller.cpp  radarcontroller.h
docs/: .$flow_slots.drawio.bkp  ARIA-RDK-Install-HowTo.odt  ARIA_RDK_Documentation_0v1.odt  Hydrogen_1v1_Datasheet.odt  Hydrogen_Datasheet_Support_Graphic.odp  ProjectManagement.odt  acquisition_loop_event  aria_rdk_0v1_user_manual.odt  aria_rdk_top.odt  aria_template.dotx  flow_slots.drawio  iq_ale.odt  new_flow.drawio  newflow_2.drawio
docs/graphics_elements/: .$ARIA_RDK_Architecture.drawio.bkp  .$SW_Architecture.drawio.bkp  ARIA_RDK_Architecture.drawio  ARIA_RDK_Architecture2.drawio  SW_Architecture.drawio
editor/: editor_config.h  gui-settings.h  octave-qscintilla.h  qt-interpreter-events.h
icons/: aria_rdk.qrc  icon.rc  icons
octaveInterface/: aria_rdk_interface_message.cpp  aria_rdk_interface_messages.h  octaveinterface.cpp  octaveinterface.h  octavescript.cpp  octavescript.h  octavethreadhandler.cpp  octavethreadhandler.h  octavews.cpp  octavews.h  rdk_event_manager.cpp  rdk_event_manager.h
output/Release/octave/toolboxes/: install_packages.m
projects/: radarproject.cpp  radarproject.h
radarModules/: antenna.cpp  antenna.h  antennainstance.cpp  antennainstance.h  radarinstance.cpp  radarinstance.h  radarmodule.cpp  radarmodule.h  radarparameter.cpp  radarparameter.h
scheduler/: opscheduler.cpp  opscheduler.h
serialcomm/: interfacecommand.cpp  interfacecommand.h  interfaceprotocol.cpp  interfaceprotocol.h  radarcommthread.cpp  radarcommthread.h
uiElements/: dlgqwtplot.cpp  dlgqwtplot.h  dlgqwtplot.ui  marker.cc  marker.h  mdioctaveinterface.cpp  mdioctaveinterface.h  mdioctaveinterface.ui  octave_txt_lexer.cpp  octave_txt_lexer.h  octavesyntaxhighlighter.cpp  octavesyntaxhighlighter.h  plotdata.cpp  plotdata.h  plotdescriptor.cpp  plotdescriptor.h  q_debugstream.h  qdlgeditlimits.cpp  qdlgeditlimits.h  qdlgeditlimits.ui  wndabout.cpp  wndabout.h  wndabout.ui  wndantennadesigner.cpp  wndantennadesigner.h  wndantennadesigner.ui  wnddatatable.cpp  wnddatatable.h  wnddatatable.ui  wnddefinecustomvar.cpp  wnddefinecustomvar.h  wnddefinecustomvar.ui  wnddirectionfocusing.cpp  wnddirectionfocusing.h  wnddirectionfocusing.ui  wndfwupload.cpp  wndfwupload.h  wndfwupload.ui  wndimportradar.cpp  wndimportradar.h  (+25 more)
utils/: ariautils.cpp  ariautils.h  serialport_utils.cpp  serialport_utils.h
